--- a/k8s.yaml
+++ b/k8s.yaml
@@ -25,28 +25,9 @@ kind: Service
 metadata:
   name: levelupdevops
 spec:
-  type: NodePort
+  type: LoadBalancer
   selector:
     app: levelupdevops
   ports:
     - port: 80
       targetPort: 80
----
-apiVersion: networking.k8s.io/v1
-kind: Ingress
-metadata:
-  name: levelupdevops
-  annotations:
-    kubernetes.io/ingress.class: addon-http-application-routing
-spec:
-  rules:
-    # https://docs.microsoft.com/en-us/azure/aks/http-application-routing
-    - http:
-        paths:
-          - path: /
-            pathType: Prefix
-            backend:
-              service:
-                name: levelupdevops
-                port:
-                  number: 80
