--- a/.github/workflows/docker-k8s.yml
+++ b/.github/workflows/docker-k8s.yml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   build:
-    runs-on: runner-866454cd9f-rkxtk
+    runs-on: runner-6bdb9d4f76-2hn9x
     steps:
     
       - uses: actions/checkout@v2
