--- a/.github/workflows/docker-k8s.yml
+++ b/.github/workflows/docker-k8s.yml
@@ -14,26 +14,26 @@ jobs:
     
       - uses: actions/checkout@v2
       
-      - name: Docker Login
-        uses: docker/login-action@v1
-        with:
-          registry: ${{ secrets.ECR_REGISTRY }}
-          username: ${{ secrets.ECR_USERNAME }}
-          password: ${{ secrets.ECR_PASSWORD }}
+#       - name: Docker Login
+#         uses: docker/login-action@v1
+#         with:
+#           registry: ${{ secrets.ECR_REGISTRY }}
+#           username: ${{ secrets.ECR_USERNAME }}
+#           password: ${{ secrets.ECR_PASSWORD }}
           
-      - name: Kubernetes Set Context
-        uses: Azure/k8s-set-context@v2
-        with:
-          method: kubeconfig
-          # Contents of kubeconfig file
-          kubeconfig: ${{ secrets.KUBE_CONFIG }}
+#       - name: Kubernetes Set Context
+#         uses: Azure/k8s-set-context@v2
+#         with:
+#           method: kubeconfig
+#           # Contents of kubeconfig file
+#           kubeconfig: ${{ secrets.KUBE_CONFIG }}
           
-      - name: "Configure AWS Credentials"
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{ secrets.ECR_USERNAME }}
-          aws-secret-access-key: ${{ secrets.ECR_PASSWORD }}
-          aws-region: us-east-1
+#       - name: "Configure AWS Credentials"
+#         uses: aws-actions/configure-aws-credentials@v1
+#         with:
+#           aws-access-key-id: ${{ secrets.ECR_USERNAME }}
+#           aws-secret-access-key: ${{ secrets.ECR_PASSWORD }}
+#           aws-region: us-east-1
     
       - name: Docker build & push, Kubernetes apply
         run: |
