--- a/.github/workflows/docker-k8s.yml
+++ b/.github/workflows/docker-k8s.yml
@@ -14,12 +14,12 @@ jobs:
     
       - uses: actions/checkout@v2
       
-#       - name: Docker Login
-#         uses: docker/login-action@v1
-#         with:
-#           registry: ${{ secrets.ECR_REGISTRY }}
-#           username: ${{ secrets.ECR_USERNAME }}
-#           password: ${{ secrets.ECR_PASSWORD }}
+      - name: Docker Login
+        uses: docker/login-action@v1
+        with:
+          registry: ${{ secrets.ECR_REGISTRY }}
+          username: ${{ secrets.ECR_USERNAME }}
+          password: ${{ secrets.ECR_PASSWORD }}
           
 #       - name: Kubernetes Set Context
 #         uses: Azure/k8s-set-context@v2
