--- a/.github/workflows/docker-k8s.yml
+++ b/.github/workflows/docker-k8s.yml
@@ -21,12 +21,18 @@ jobs:
           username: ${{ secrets.ECR_USERNAME }}
           password: ${{ secrets.ECR_PASSWORD }}
           
-      - name: Kubernetes Set Context
-        uses: Azure/k8s-set-context@v2
+      - name: Kubectl tool installer
+        uses: Azure/setup-kubectl@v2.1
         with:
-          method: kubeconfig
-          # Contents of kubeconfig file
-          kubeconfig: ${{ secrets.KUBE_CONFIG }}
+          # Version of kubectl
+          version: latest # default is latest
+          
+#       - name: Kubernetes Set Context
+#         uses: Azure/k8s-set-context@v2
+#         with:
+#           method: kubeconfig
+#           # Contents of kubeconfig file
+#           kubeconfig: ${{ secrets.KUBE_CONFIG }}
           
 #       - name: "Configure AWS Credentials"
 #         uses: aws-actions/configure-aws-credentials@v1
