--- a/.github/workflows/docker-k8s.yml
+++ b/.github/workflows/docker-k8s.yml
@@ -34,12 +34,12 @@ jobs:
           # Contents of kubeconfig file
           kubeconfig: ${{ secrets.KUBE_CONFIG }}
           
-#       - name: "Configure AWS Credentials"
-#         uses: aws-actions/configure-aws-credentials@v1
-#         with:
-#           aws-access-key-id: ${{ secrets.ECR_USERNAME }}
-#           aws-secret-access-key: ${{ secrets.ECR_PASSWORD }}
-#           aws-region: us-east-1
+      - name: "Configure AWS Credentials"
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.ECR_USERNAME }}
+          aws-secret-access-key: ${{ secrets.ECR_PASSWORD }}
+          aws-region: us-east-1
     
       - name: Docker build & push, Kubernetes apply
         run: |
