--- a/.github/workflows/docker-k8s.yml
+++ b/.github/workflows/docker-k8s.yml
@@ -34,12 +34,17 @@ jobs:
           # Contents of kubeconfig file
           kubeconfig: ${{ secrets.KUBE_CONFIG }}
           
-      - name: "Configure AWS Credentials"
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{ secrets.ECR_USERNAME }}
-          aws-secret-access-key: ${{ secrets.ECR_PASSWORD }}
-          aws-region: us-east-1
+      - name: Setup AWS SAM CLI
+        # You may pin to the exact commit or the version.
+        # uses: aws-actions/setup-sam@0578b2f57e540e67233c3ce0c5477ee36938ff3d
+        uses: aws-actions/setup-sam@v1
+          
+#       - name: "Configure AWS Credentials"
+#         uses: aws-actions/configure-aws-credentials@v1
+#         with:
+#           aws-access-key-id: ${{ secrets.ECR_USERNAME }}
+#           aws-secret-access-key: ${{ secrets.ECR_PASSWORD }}
+#           aws-region: us-east-1
     
       - name: Docker build & push, Kubernetes apply
         run: |
