--- a/.github/workflows/docker-k8s.yml
+++ b/.github/workflows/docker-k8s.yml
@@ -34,10 +34,10 @@ jobs:
           # Contents of kubeconfig file
           kubeconfig: ${{ secrets.KUBE_CONFIG }}
           
-      - name: AWS CLI
+      - name: AWS cli install action
         # You may pin to the exact commit or the version.
-        # uses: ItsKarma/aws-cli@820b0dff33bbd9c699e98194864788bbc69f8a58
-        uses: ItsKarma/aws-cli@v1.70.0
+        # uses: chrislennon/action-aws-cli@1347f1da2852be38fdbea5e6e336f1e297fec7a0
+        uses: chrislennon/action-aws-cli@1.1
           
 #       - name: "Configure AWS Credentials"
 #         uses: aws-actions/configure-aws-credentials@v1
