--- a/.github/workflows/docker-k8s.yml
+++ b/.github/workflows/docker-k8s.yml
@@ -34,10 +34,10 @@ jobs:
           # Contents of kubeconfig file
           kubeconfig: ${{ secrets.KUBE_CONFIG }}
           
-      - name: AWS cli install action - updated
+      - name: AWS cli install action - patched
         # You may pin to the exact commit or the version.
-        # uses: toomasz/action-aws-cli@de2cdeddf2901536444f339f90173abfa48bbd6c
-        uses: toomasz/action-aws-cli@v1.3
+        # uses: mikemjharris/action-aws-cli@5723aed088ba8a69b133c10605a4a75a3153dc1e
+        uses: mikemjharris/action-aws-cli@1.3
           
 #       - name: "Configure AWS Credentials"
 #         uses: aws-actions/configure-aws-credentials@v1
