--- a/.github/workflows/docker-k8s.yml
+++ b/.github/workflows/docker-k8s.yml
@@ -34,10 +34,11 @@ jobs:
           # Contents of kubeconfig file
           kubeconfig: ${{ secrets.KUBE_CONFIG }}
           
-      - name: AWS cli install action - patched
-        # You may pin to the exact commit or the version.
-        # uses: mikemjharris/action-aws-cli@5723aed088ba8a69b133c10605a4a75a3153dc1e
-        uses: mikemjharris/action-aws-cli@1.3
+      - id: install-aws-cli
+        uses: unfor19/install-aws-cli-action@v1
+        with:
+          version: 2     # default
+          verbose: false # default
           
 #       - name: "Configure AWS Credentials"
 #         uses: aws-actions/configure-aws-credentials@v1
