--- a/.github/workflows/docker-k8s.yml
+++ b/.github/workflows/docker-k8s.yml
@@ -34,6 +34,9 @@ jobs:
           # Contents of kubeconfig file
           kubeconfig: ${{ secrets.KUBE_CONFIG }}
           
+      - uses: actions/setup-python@v2
+        with:
+          python-version: '3.7'
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
