--- a/.github/workflows/docker-k8s.yml
+++ b/.github/workflows/docker-k8s.yml
@@ -35,6 +35,8 @@ jobs:
           kubeconfig: ${{ secrets.KUBE_CONFIG }}
           
       - uses: actions/setup-python@v2
+        with:
+          python-version: '3.8.2'
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
