--- a/.github/workflows/docker-k8s.yml
+++ b/.github/workflows/docker-k8s.yml
@@ -37,6 +37,7 @@ jobs:
       - uses: actions/setup-python@v2
         with:
           python-version: '3.8.2'
+          architecture: x64
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
