--- a/.github/workflows/docker-k8s.yml
+++ b/.github/workflows/docker-k8s.yml
@@ -36,7 +36,7 @@ jobs:
           
       - uses: actions/setup-python@v2
         with:
-          python-version: '3.8.2'
+          python-version: '3.x'
           architecture: x64
       - name: Install dependencies
         run: |
