--- a/k8s.yaml
+++ b/k8s.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: levelupdevops
+  namespace: gitaction
 spec:
   replicas: 1
   selector:
@@ -24,6 +25,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: levelupdevops
+  namespace: gitaction
 spec:
   type: LoadBalancer
   selector:
