--- a/.github/workflows/docker-k8s.yml
+++ b/.github/workflows/docker-k8s.yml
@@ -11,16 +11,7 @@ jobs:
   build:
     runs-on: [self-hosted]
     steps:
-    
       - uses: actions/checkout@v2
-      
-      - name: Docker Login
-        uses: docker/login-action@v2.0.0
-        with:
-          registry: ${{ secrets.ECR_REGISTRY }}
-          username: ${{ secrets.ECR_USERNAME }}
-          password: ${{ secrets.ECR_PASSWORD }}
-          
       - name: Kubectl tool installer
         uses: Azure/setup-kubectl@v2.1
         with:
@@ -33,16 +24,10 @@ jobs:
           method: kubeconfig
           # Contents of kubeconfig file
           kubeconfig: ${{ secrets.KUBE_CONFIG }}
-          
-      - name: "Configure AWS Credentials"
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{ secrets.ECR_USERNAME }}
-          aws-secret-access-key: ${{ secrets.ECR_PASSWORD }}
-          aws-region: us-east-1
     
       - name: Docker build & push, Kubernetes apply
         run: |
+          docker login ${{ secrets.ECR_REGISTRY }} --username ${{ secrets.ECR_USERNAME }} --password ${{ secrets.ECR_PASSWORD }}
           docker build -t ${{ secrets.DOC_URL }}/backend_api:${{ github.sha }} .
           docker push ${{ secrets.DOC_URL }}/backend_api:${{ github.sha }}
           sed -i'' -e 's/DOC_URL/${{ secrets.DOC_URL }}/g' -e 's/IMAGE_LABEL/${{ github.sha }}/g' k8s.yaml
