--- a/.github/workflows/docker-k8s.yml
+++ b/.github/workflows/docker-k8s.yml
@@ -28,3 +28,4 @@ jobs:
       - name: Docker build & push, Kubernetes apply
         run: |
           docker login ${{ secrets.ECR_REGISTRY }} --username ${{ secrets.ECR_USERNAME }} --password ${{ secrets.ECR_PASSWORD }}
+          docker pull harbor.tsl.telus.com/oe-b2b-evs/ivs-ui:1.0.0-20
