--- a/.github/workflows/docker-k8s.yml
+++ b/.github/workflows/docker-k8s.yml
@@ -12,6 +12,16 @@ jobs:
     runs-on: [self-hosted]
     steps:
       - uses: actions/checkout@v2    
+      
+      - name: Docker Login
+        # You may pin to the exact commit or the version.
+        # uses: docker/login-action@49ed152c8eca782a232dede0303416e8f356c37b
+        uses: docker/login-action@v2.0.0
+        with:
+          registry: ${{ secrets.ECR_REGISTRY }}
+          username: ${{ secrets.ECR_USERNAME }}
+          password: ${{ secrets.ECR_PASSWORD }}
+      
       - name: Docker build & push, Kubernetes apply
         run: |
           docker ps
