--- a/.github/workflows/docker-k8s.yml
+++ b/.github/workflows/docker-k8s.yml
@@ -18,9 +18,8 @@ jobs:
         # uses: docker/login-action@49ed152c8eca782a232dede0303416e8f356c37b
         uses: docker/login-action@v2.0.0
         with:
-          registry: ${{ secrets.ECR_REGISTRY }}
-          username: ${{ secrets.ECR_USERNAME }}
-          password: ${{ secrets.ECR_PASSWORD }}
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
       
       - name: Docker build & push, Kubernetes apply
         run: |
