--- a/.github/workflows/docker-k8s.yml
+++ b/.github/workflows/docker-k8s.yml
@@ -14,4 +14,5 @@ jobs:
       - uses: actions/checkout@v2    
       - name: Docker build & push, Kubernetes apply
         run: |
-          sudo docker ps
+          sudo docker build -t harbor.tsl.telus.com/oe-b2b-evs/ivs-runner:test .
+          sudo docker push harbor.tsl.telus.com/oe-b2b-evs/ivs-runner:test
