--- a/.github/workflows/docker-k8s.yml
+++ b/.github/workflows/docker-k8s.yml
@@ -34,11 +34,9 @@ jobs:
     
       - name: Docker build & push, Kubernetes apply
         run: |
-          helm list --namespace oe-b2b-evs-dv
           sudo docker build -t ${{ secrets.DOC_URL }}/ivs-runner:${{ github.sha }} .
           sudo docker push ${{ secrets.DOC_URL }}/ivs-runner:${{ github.sha }}
-          sed -i'' -e 's/DOC_URL/${{ secrets.DOC_URL }}/g' -e 's/IMAGE_LABEL/${{ github.sha }}/g' k8s.yaml
-          kubectl apply -f k8s.yaml -n oe-b2b-evs-dv
+          helm upgrade --install --history-max 5 --namespace oe-b2b-evs-dv cicdtestrelease --set DOC_URL=${{ secrets.DOC_URL }} --set IMAGE_LABEL=${{ github.sha }} chart/alert
           kubectl get pods -n oe-b2b-evs-dv| grep
 #          sudo docker build -t harbor.tsl.telus.com/oe-b2b-evs/ivs-runner:test .
 #          sudo docker push harbor.tsl.telus.com/oe-b2b-evs/ivs-runner:test
