--- a/chart/alert/templates/k8s.yaml
+++ b/chart/alert/templates/k8s.yaml
@@ -14,6 +14,8 @@ spec:
         app: levelupdevops
         version: {{ .Values.IMAGE_LABEL }}
     spec:
+      imagePullSecrets:
+        - name: regcred
       containers:
         - name: levelupdevops
           image: '{{ .Values.DOC_URL }}/ivs-runner:{{ .Values.IMAGE_LABEL }}'
