--- a/self/secret.yaml
+++ b/self/secret.yaml
@@ -2,7 +2,10 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: github-secret
-  namespace: gitaction
+  namespace: oe-b2b-evs-dv
 type: Opaque
 stringData:
-  GITHUB_PERSONAL_TOKEN: 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
+  GITHUB_PERSONAL_TOKEN: test
+  harbor_url: ''
+  harbor_username: ''
+  harbor_password: ''
