--- a/.github/workflows/docker-k8s-dv.yml
+++ b/.github/workflows/docker-k8s-dv.yml
@@ -12,14 +12,13 @@ jobs:
     runs-on: [self-hosted]
     steps:
       - uses: actions/checkout@v2
-      - name: List tags
-        uses: localazy/tag@v1
-        with:
-          list: true
-      - name: Publish new-tag
-        uses: localazy/tag@v1
-        with:
-          publish: 'new-tag'
+
+      - name: Check if Git tag exists
+        run: echo "::set-env name=HEAD_TAG::$(git tag --points-at HEAD)"
+
+      - name: Runs only if Git tag exists
+        run: echo"This runs because Git tag points at HEAD ..."
+        if: env.HEAD_TAG != ''
 #      - name: Kubernetes Set Context
 #        uses: Azure/k8s-set-context@v2
 #        with:
