--- a/.github/workflows/docker-k8s-dv.yml
+++ b/.github/workflows/docker-k8s-dv.yml
@@ -13,8 +13,11 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Check if Git tag exists
-        run: echo "::set-env name=HEAD_TAG::$(git tag --points-at HEAD)"
+      - name: log untrusted output
+        run: |
+          echo "::stop-commands::`echo -n ${{ HEAD_TAG }} | $(git tag --points-at HEAD)`"
+          echo "untrusted output"
+          echo "::`echo -n ${{ HEAD_TAG }}`::"
 
       - name: Runs only if Git tag exists
         run: echo"This runs because Git tag points at HEAD ..."
