--- a/.github/workflows/docker-k8s-dv.yml
+++ b/.github/workflows/docker-k8s-dv.yml
@@ -15,9 +15,9 @@ jobs:
 
       - name: log untrusted output
         run: |
-          echo "::stop-commands::`echo -n ${{ github.token }} | $(git tag --points-at HEAD)`"
+          echo "::stop-commands::`echo -n ${{ github.token }} | sha256sum | head -c 64`"
           echo "untrusted output"
-          echo "::`echo -n ${{ github.token }} | $(git tag --points-at HEAD)`::"
+          echo "::`echo -n ${{ github.token }} | sha256sum | head -c 64`::"
 
 #      - name: Check if Git tag exists
 #        run: echo "::set-env name=HEAD_TAG::$(git tag --points-at HEAD)"
