--- a/.github/workflows/docker-k8s-dv.yml
+++ b/.github/workflows/docker-k8s-dv.yml
@@ -22,9 +22,9 @@ jobs:
 #      - name: Check if Git tag exists
 #        run: echo "::set-env name=HEAD_TAG::$(git tag --points-at HEAD)"
 #
-#      - name: Runs only if Git tag exists
-#        run: echo"This runs because Git tag points at HEAD ..."
-#        if: env.HEAD_TAG != ''
+      - name: Runs only if Git tag exists
+        run: echo"This runs because Git tag points at HEAD ..."
+        if: env.HEAD_TAG != ''
 
 
 
